--- a/node-nest-app/template/template.yaml
+++ b/node-nest-app/template/template.yaml
@@ -3,9 +3,9 @@ apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 # some metadata about the template itself
 metadata:
-  name: java-template
-  title: Java Plugin Dropwizard and CLI template
-  description: Provisions a mini Java Plugin Dropwizard and CLI Appli
+  name: td-nest-template
+  title: TypeScript Plugin Nest.JS and CLI template
+  description: Provisions a mini TypeScript Plugin Nest.JS and CLI Appli
   owner: dev-team
   type: service
 
