--- a/python-flask-app/template/template.yaml
+++ b/python-flask-app/template/template.yaml
@@ -15,11 +15,13 @@ metadata:
       required:
         - component_id
         - environment
+        - name
+        - owner
       properties:
         component_id:
           title: Component name
           type: string
-          description: Provide a component (microservice) name
+          description: Provide a uniq component (microservice) id
           pattern: '^([A-Z][a-zA-Z0-9]*)(-[a-zA-Z0-9]+)*$'
         environment:
           title: Deployment Environments
@@ -48,17 +50,7 @@ metadata:
           ui:options:
             catalogFilter:
               kind: Group
-    - title: Choose a location
-      required:
-        - Repository url
-      properties:
-        repoUrl:
-          title: Repository Location
-          type: string
-          ui:field: RepoUrlPicker
-          ui:options:
-            allowedHosts:
-              - github.com
+
 
   # here's the steps that are executed in series in the scaffolder backend
   steps:
@@ -68,23 +60,21 @@ metadata:
       input:
         url: ./template
         values:
+          app_name: ${{parameters.component_id}}
+          app_env: ${{parameters.environment}}
           name: ${{ parameters.name }}
           owner: ${{ parameters.owner }}
-
-    - id: fetchDocs
-      name: Fetch Docs
-      action: fetch:plain
-      input:
-        targetPath: ./community
-        url: https://github.com/backstage/community/tree/main/backstage-community-sessions
 
     - id: publish
       name: Publish
       action: publish:github
       input:
-        description: This is ${{ parameters.name }}
-        repoUrl: ${{ parameters.repoUrl }}
-        defaultBranch: 'main'
+        allowedHosts:
+          - github.com
+        description: This is ${{ parameters.component_id }}
+        repoUrl: github.com?owner=lucilegabriellefievetlacombe-afk&repo=${{parameters.component_id}}
+        protectDefaultBranch: false
+        repoVisibility: public
 
     - id: register
       name: Register
@@ -101,3 +91,4 @@ metadata:
       - title: Open in catalog
         icon: catalog
         entityRef: ${{ steps['register'].output.entityRef }}
+
