--- a/java-dropwizard-app/template.yaml
+++ b/java-dropwizard-app/template.yaml
@@ -3,9 +3,10 @@ apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 # some metadata about the template itself
 metadata:
-  name: rust-actix-template
-  title: Rust Plugin Actix and CLI template
-  description: Provisions a mini Rust Plugin Actix and CLI Appli
+  name: java-dropwizard-template
+  title: Java Plugin Dropwizard and CLI template
+  description: Provisions a mini Java Plugin Dropwizard and CLI Appli
+spec:
   owner: dev-team
   type: service
 
@@ -14,20 +15,15 @@ metadata:
     - title: Fill in some steps
       required:
         - component_id
+        - name
         - environment
+        - owner
       properties:
         component_id:
-          title: Component name
+          title: Component Uniq Id
           type: string
-          description: Provide a component (microservice) name
+          description: Provide a uniq component (microservice) id in kebab case
           pattern: '^([A-Z][a-zA-Z0-9]*)(-[a-zA-Z0-9]+)*$'
-        environment:
-          title: Deployment Environment
-          type: string
-          description: the environment we deploy
-          enum:
-            - intranet
-            - extranet
         name:
           title: Name
           type: string
@@ -35,6 +31,31 @@ metadata:
           ui:autofocus: true
           ui:options:
             rows: 5
+        environments:
+          title: Deployment Environments
+          type: array
+          description: The environments where we deploy
+          items:
+            type: string
+            default: feat
+            enum:
+              - feat
+              - fix
+              - refacto
+              - integ
+              - alpha
+              - hotfix
+              - release
+            enumNames:
+              - 'feature_xxx branchs - from and to be merged in develop branch'
+              - 'fix_xxx branchs - from and to be merged in develop branch'
+              - 'refacto_xxx branchs - from and to be merged in develop branch'
+              - 'develop branch - uniq integration branch for QA Tests in QA env'
+              - 'pre-release version_X.Y.0-alpha branchs - from validated develop branch, for System Major or Minor Versions Tests in PPD'
+              - 'hotfix version_x.y.Z branchs - from last version branch, for Rapid System Patch Tests in PPD'
+              - 'main branch with release_x.y.z tags - from last validated version or hotfix branch in PROD'
+          uniqueItems: true
+          ui:widget: checkboxes
         owner:
           title: Owner
           type: string
@@ -43,17 +64,6 @@ metadata:
           ui:options:
             catalogFilter:
               kind: Group
-    - title: Choose a location
-      required:
-        - Repository url
-      properties:
-        repoUrl:
-          title: Repository Location
-          type: string
-          ui:field: RepoUrlPicker
-          ui:options:
-            allowedHosts:
-              - github.com
 
   # here's the steps that are executed in series in the scaffolder backend
   steps:
@@ -63,23 +73,20 @@ metadata:
       input:
         url: ./template
         values:
+          uid:  ${{parameters.component_id}}
+          environements : ${{parameters.environments}}
           name: ${{ parameters.name }}
           owner: ${{ parameters.owner }}
-
-    - id: fetchDocs
-      name: Fetch Docs
-      action: fetch:plain
-      input:
-        targetPath: ./community
-        url: https://github.com/backstage/community/tree/main/backstage-community-sessions
 
     - id: publish
       name: Publish
       action: publish:github
       input:
         description: This is ${{ parameters.name }}
-        repoUrl: ${{ parameters.repoUrl }}
+        repoUrl: github.com?owner=lucilegabriellefievetlacombe-afk&repo=${{parameters.component_id}}
         defaultBranch: 'main'
+        protectDefaultBranch: false
+        repoVisibility: public
 
     - id: register
       name: Register
