--- a/java-spring-app/template/catalog-info.yaml
+++ b/java-spring-app/template/catalog-info.yaml
@@ -4,7 +4,7 @@ metadata:
   name: ${{values.uid}}
   description: ${{values.name}} that displays grettings.
   annotations:
-    github.com/project-slug: lucilegabriellefievetlacombe-afk/${{values.owner}}-${{values.uid}}
+    github.com/project-slug: lucilegabriellefievetlacombe-afk/${{values.uid}}
     backstage.io/techdocs-ref: dir:.
 spec:
   type: service
