python-flask-app template, with MAZ team organisation and python app templatised

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.env
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
@@ -8,6 +9,7 @@ __pycache__/
 
 # Distribution / packaging
 .Python
+*/build/
 build/
 develop-eggs/
 dist/
@@ -70,6 +72,7 @@ instance/
 
 # Sphinx documentation
 docs/_build/
+*/docd/_build/
 
 # PyBuilder
 .pybuilder/
